welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:1: error: Missing closing brace `}' assumed here
var vuBiscuit = false
^Program:1: error: expected class or object definition
var vuBiscuit = false
^Program:2: error: expected class or object definition
def haveBaggle():Boolean = {
^