welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
var vuBiscuit = false
def haveBaggle():Boolean = {
  vu = false
  for (i <- 1 to 7){
    if(estSurBiscuit()){vu = true)
  	}
    
    avance()
   for (i <- 1 to 7){
    recule()
  }
  return(vu)
}
  

do{
  vuBiscuit = haveBaggle()
  droite()
  avance()
  gauche()
}while(vuBiscuit == false)